--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>My First Heading</h1>
         <p>My first paragraph.</p>
-         <img src="img_girl.jpeg" alt="Girl in a jacket" width="500" height="600">
+         <img src="kokaton.png" alt="University's mascot kokaton" width="500" height="500">
     </body>
 </html>
