--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         <p>My first paragraph.</p>
          <img src="kokaton.png" alt="University's mascot kokaton" width="500" height="500">
 
-         <iframe width="560" height="315" src="https://youtu.be/xDI7ub5BW9c"
-title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/xDI7ub5BW9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
